--- a/mCommonUtils/build.gradle
+++ b/mCommonUtils/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    /*****************Blankj/AndroidUtilCode*****************/
+    implementation 'com.blankj:utilcode:1.17.3'
+    /*****************Blankj/AndroidUtilCode*****************/
 }
