--- a/mCommonUtils/src/main/AndroidManifest.xml
+++ b/mCommonUtils/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.xt.m_common_utils"/>
+          package="com.xt.m_common_utils">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+</manifest>
