--- a/mCommonUtils/build.gradle
+++ b/mCommonUtils/build.gradle
@@ -32,10 +32,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    api 'com.android.support:appcompat-v7:27.1.1'
 
     api 'com.google.code.gson:gson:2.8.2'
     /*****************Blankj/AndroidUtilCode*****************/
